# cpp_ide_helper

./: .gitignore  CMakeLists.txt  all_build.sh  atf.cpp  atf_gen_filelist.sh  atf_gen_filelist_v2.sh  atf_test.sh  cmd_analyze.cpp  hello.cpp  kern_gen_filelist_v2.sh  kernel.cpp  kernel_gen_filelist.sh  only_build.sh  readme.md  test.sh  test_all.sh  uboot_gen_filelist.sh
common/: CMakeLists.txt  common.cpp  common.h  string_utils.h
file_parser/: CMakeLists.txt  cmd_kernel.cpp  file_parser.h  o_atf.cpp
main/: CMakeLists.txt  atf.cpp  atf_dep_analyzer.cpp  check_dep.cpp  kern_dep_analyzer.cpp  kernel.cpp  merge.cpp
